@@ -1,4 +1,6 @@
 4.8.1:
+  * Support for "DB_ENV->mutex_set_align" and
+    "DB_ENV->mutex_get_align".
 
 4.8.0:
   * Support for Berkeley DB 4.8.
